--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="POST" action="mailto:jlopezp07@gmail.com">
+							<form method="POST" action="https://formsubmit.co/jlopezp07@gmail.com">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
