--- a/project_3.html
+++ b/project_3.html
@@ -62,7 +62,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="get" action="https://formsubmit.co/your@email.com">
+							<form method="get" action="https://formsubmit.co/jlopezp07@gmail.com">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
