--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<img class="juan-pic" src="images/Juan_gray.png" alt="juan picture">
+						<img class="juan-pic" src="images/Juan_gray_small.png" alt="juan picture">
 						<h1>HI! MY NAME IS JUAN</h1>
 						<p>I'am a mechanical engineer, changing my path. UI/UX Designer, front-end developer growing.</p>
 						<ul class="actions">
