--- a/project_2.html
+++ b/project_2.html
@@ -34,7 +34,7 @@
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/j.lopezp07/" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/jlopzp07" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-									<li><a href="https://wa.me/573127724457" class="icon brands alt fa-whatsapp" target="_blank"><span class="label">Whatsapp</span></a></li>
+									<li><a href="https://bit.ly/3Da9IGY" class="icon brands alt fa-whatsapp" target="_blank"><span class="label">Whatsapp</span></a></li>
 						</ul>
 					</nav>
 
@@ -101,7 +101,7 @@
 								<ul class="icons alt">
 									<li><a href="https://www.instagram.com/j.lopezp07/" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/jlopzp07" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-									<li><a href="https://bit.ly/3iNMP4H" class="icon brands alt fa-whatsapp" target="_blank"><span class="label">Whatsapp</span></a></li>
+									<li><a href="https://bit.ly/3Da9IGY" class="icon brands alt fa-whatsapp" target="_blank"><span class="label">Whatsapp</span></a></li>
 								</ul>
 							</section>
 						</section>
