--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/Report Cover.png" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="#" class="button">View More</a></li>
+										<li><a href="project_4.html" class="button">View More</a></li>
 									</ul>
 								</article>
 							</section>
