--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="project_1.html">PETTO Website</a></li>
 							<li><a href="project_2.html">PETTO App</a></li>
-							<li><a href="project_3.html">We are HIRING</a></li>
-							<li><a href="project_4.html">Personnel Report</a></li>
+							<li><a href="project_5.html">Time Tracking App</a></li>
+							<li><a href="project_4.html">Personnel Report</a></li>						
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/j.lopezp07/" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
@@ -71,11 +71,11 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">We are hiring</h2>
+										<h2><a href="#">Time Tracking App</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Hiring flyers Cover 1.png" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/Artboard – 3 Square.png" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="project_3.html" class="button">View More</a></li>
+										<li><a href="project_5.html" class="button">View More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -85,6 +85,15 @@
 									<a href="#" class="image fit"><img src="images/Report Cover.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="project_4.html" class="button">View More</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="#">We are hiring</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Hiring flyers Cover 1.png" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="project_3.html" class="button">View More</a></li>
 									</ul>
 								</article>
 							</section>
