--- a/project_3.html
+++ b/project_3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>We are HIRING Flyers</title>
+		<title>PETTO Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,8 +28,8 @@
 							<li><a href="index.html">Portfolio</a></li>
 							<li><a href="project_1.html">PETTO Website</a></li>
 							<li><a href="project_2.html">PETTO App</a></li>
-							<li class="active"><a href="project_3.html">We are HIRING</a></li>
-							<li><a href="project_4.html">Personnel report</a></li>
+							<li><a href="project_5.html">Time Tracking App</a></li>
+							<li><a href="project_4.html">Personnel Report</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/j.lopezp07/" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
