--- a/project_4.html
+++ b/project_4.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Personnel Report</title>
+		<title>PETTO Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,7 +28,7 @@
 							<li><a href="index.html">Portfolio</a></li>
 							<li><a href="project_1.html">PETTO Website</a></li>
 							<li><a href="project_2.html">PETTO App</a></li>
-							<li><a href="project_3.html">We are HIRING</a></li>
+							<li><a href="project_5.html">Time Tracking App</a></li>
 							<li class="active"><a href="project_4.html">Personnel Report</a></li>
 						</ul>
 						<ul class="icons">
