--- a/project_5.html
+++ b/project_5.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">personnel report</a>
+						<a href="index.html" class="logo">Time tracking app</a>
 					</header>
 
 				<!-- Nav -->
@@ -52,9 +52,9 @@
 								<p>The time tracking app helps you track your time on a daily basis, everything you do, so you can measure what are you spending your time in. It lets you know if you are being productive, or if you are just wasting your productive time.
 								</p>
 								<div class="image main"><img src="images/Artboard – 1.png"></div>
-								<p>You can personilize your categories, your graphics, what you want to follow-up, what you want to measure. You can take notes to specifiy anything you want.</p>
+								<p>You can personalize your categories, your graphics, what you want to follow-up, what you want to measure. You can take notes to specifiy anything you want.</p>
 								<div class="image main"><img src="images/Artboard – 2.png"></div>
-								<p>From your profile, you can set goals, keep track of them. When you measure your time, you will be able to optimize your time, this will let you "have more time" for the things you love, your projects, your life.</p>
+								<p>From your profile, you can set goals, keep track of them. When you measure your time, you will be able to optimize it, this will let you "have more time" for the things you love, your projects, your life.</p>
 								<a class="go-back button" href="#header">Go up</a>
 							</section>
 							
