--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<div id="intro">
 						<img class="juan-pic" src="images/Juan_gray_small.png" alt="juan picture">
 						<h1>HI! MY NAME IS JUAN</h1>
-						<p>I'am a mechanical engineer, changing my path. UI/UX Designer, front-end developer growing.</p>
+						<p>I'm a mechanical engineer, changing my path. UI/UX Designer, front-end developer growing.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
