--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="portfolio-2.0.html">Portfolio 2.0</a></li>
 							<li><a href="petto-website.html">PETTO Website</a></li>
 							<li><a href="petto-app.html">PETTO App</a></li>
-							<li><a href="time-tracking.html">Time Tracking App</a></li>
-							<li><a href="petto-business-card.html">PETTO Business Card</a></li>						
+							<li><a href="time-tracking.html">Time Tracking App</a></li>				
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/j.lopezp07/" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
@@ -50,16 +50,25 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">This is my last project</h2>
-									<h2><a>PETTO</a></h2>
+									<h2><a>Portfolio 2.0</a></h2>
 								</header>
-								<a href="petto-website.html" class="image main"><img src="images/Website Cover.png" alt="" /></a>
+								<a href="portfolio-2.0.html" class="image main"><img src="images/Portfolio 2.0 - Cover.png" alt="cover image" /></a>
 								<ul class="actions special">
-									<li><a href="petto-website.html" class="button large">View More</a></li>
+									<li><a href="portfolio-2.0.html" class="button large">View More</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="#">PETTO WEB</h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/Web Small Cover.png" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="petto-website.html" class="button">View More</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="#">PETTO APP</h2>
