--- a/petto-business-card.html
+++ b/petto-business-card.html
@@ -19,13 +19,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">PETTO Business Card</a>
+						<a href="index.html" class="logo">HOME</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Portfolio</a></li>
+							<li><a href="portfolio-2.0.html">Portfolio 2.0</a></li>
 							<li><a href="petto-website.html">PETTO Website</a></li>
 							<li><a href="petto-app.html">PETTO App</a></li>
 							<li><a href="time-tracking.html">Time Tracking App</a></li>
@@ -52,7 +52,9 @@
 								<p>A fresh look with the colors of the brand, useful information, and a QR code in the back.
 								</p>
 								<div class="image main"><img src="images/Business Card 1 - Presentation.png"></div>
+								<p>You can personalize your categories, your graphics, what you want to follow-up, what you want to measure. You can take notes to specifiy anything you want.</p>
 								<div class="image main"><img src="images/Business Card 2 - Presentation.png"></div>
+								<p>From your profile, you can set goals, keep track of them. When you measure your time, you will be able to optimize it, this will let you "have more time" for the things you love, your projects, your life.</p>
 								<a class="go-back button" href="#header">Go up</a>
 							</section>
 							
