--- a/hiring-flyer.html
+++ b/hiring-flyer.html
@@ -19,13 +19,12 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">We are hiring</a>
+						<a href="index.html" class="logo">HOME</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Portfolio</a></li>
 							<li><a href="petto-website.html">PETTO Website</a></li>
 							<li><a href="petto-app.html">PETTO App</a></li>
 							<li><a href="time-tracking.html">Time Tracking App</a></li>
