--- a/personnel-rep.html
+++ b/personnel-rep.html
@@ -19,17 +19,17 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">personnel report</a>
+						<a href="index.html" class="logo">HOME</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Portfolio</a></li>
 							<li><a href="petto-website.html">PETTO Website</a></li>
 							<li><a href="petto-app.html">PETTO App</a></li>
 							<li><a href="time-tracking.html">Time Tracking App</a></li>
 							<li class="active"><a href="personnel-rep.html">Personnel Report</a></li>
+							<li><a href="petto-business-card.html">PETTO Business Card</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/j.lopezp07/" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
