--- a/petto-website.html
+++ b/petto-website.html
@@ -19,13 +19,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">PETTO Website</a>
+						<a href="index.html" class="logo">HOME</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Portfolio</a></li>
+							<li><a href="portfolio-2.0.html">Portfolio 2.0</a></li>
 							<li class="active"><a href="petto-website.html">PETTO Website</a></li>
 							<li><a href="petto-app.html">PETTO App</a></li>
 							<li><a href="time-tracking.html">Time Tracking App</a></li>
